--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "jshint": "^2.13.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-native-web": "^0.17.5",
     "react-scripts": "4.0.3",
     "reactstrap": "^8.10.0",
     "web-vitals": "^1.1.2"
