--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.22.0",
     "bootstrap": "^5.1.1",
+    "firebase": "^8.2.8",
     "jshint": "^2.13.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
